--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,14 @@
             <version>8.0.29</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.6.8.Final</version>
+        </dependency>
+
+
+
 
     </dependencies>
 
